docs/6.17.0/users/_sources/usingdakota/reference/method-fsu_cvt-variance_based_decomp.rst.txt
.. _method-fsu_cvt-variance_based_decomp:

"""""""""""""""""""""
variance_based_decomp
"""""""""""""""""""""


Activates global sensitivity analysis based on decomposition of
response variance into contributions from variables


.. toctree::
   :hidden:
   :maxdepth: 1

   method-fsu_cvt-variance_based_decomp-drop_tolerance


**Specification**

- *Alias:* None

- *Arguments:* None

- *Default:* no variance-based decomposition


**Child Keywords:**

+-------------------------+--------------------+--------------------+---------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword     | Dakota Keyword Description                  |
|                         | Group              |                    |                                             |
+=========================+====================+====================+=============================================+
| Optional                                     | `drop_tolerance`__ | Suppresses output of sensitivity indices    |
|                                              |                    | with values lower than this tolerance       |
+----------------------------------------------+--------------------+---------------------------------------------+

.. __: method-fsu_cvt-variance_based_decomp-drop_tolerance.html



**Description**


Dakota can calculate sensitivity indices through variance based
decomposition using the keyword ``variance_based_decomp``.  These
indicate how important the uncertainty in each input variable is in
contributing to the output variance.

*Default Behavior*

Because of the computational cost, ``variance_based_decomp`` is turned
off as a default.

If the user specified a number of samples, N, and a number of
nondeterministic variables, M, variance-based decomposition requires
the evaluation of N*(M+2) samples. *Note that specifying this
keyword will increase the number of function evaluations above the
number requested with the ``samples`` keyword since replicated sets of
sample values are evaluated.*

*Expected Outputs*

When ``variance_based_decomp`` is specified, sensitivity indices for
main effects and total effects will be reported.  Main effects
(roughly) represent the percent contribution of each individual
variable to the variance in the model response.  Total effects
represent the percent contribution of each individual variable in
combination with all other variables to the variance in the model
response

*Usage Tips*

To obtain sensitivity indices that are reasonably accurate, we
recommend that N, the number of samples, be at least one hundred and
preferably several hundred or thousands.



**Examples**



.. code-block::

    method,
      sampling
        sample_type lhs
        samples = 100
        variance_based_decomp





**Theory**


In this context, we take sensitivity analysis to be global, not local
as when calculating derivatives of output variables with respect to
input variables. Our definition is similar to that of :cite:p:`Sal04` :
"The study of how uncertainty in the output of a model can be
apportioned to different sources of uncertainty in the model input."

Variance based decomposition is a way of using sets of samples to
understand how the variance of the output behaves, with respect to
each input variable. A larger value of the sensitivity index,
:math:`S_i` , means that the uncertainty in the input variable i has a
larger effect on the variance of the output. More details on the
calculations and interpretation of the sensitivity indices can be
found in :cite:p:`Sal04` and :cite:p:`Weirs10`.


